@@ -86,6 +86,34 @@ name|org
 operator|.
 name|apache
 operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|Log
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|commons
+operator|.
+name|logging
+operator|.
+name|LogFactory
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|hadoop
 operator|.
 name|conf
@@ -736,6 +764,22 @@ name|AbstractService
 implements|implements
 name|ApplicationHistoryManager
 block|{
+DECL|field|LOG
+specifier|private
+specifier|static
+specifier|final
+name|Log
+name|LOG
+init|=
+name|LogFactory
+operator|.
+name|getLog
+argument_list|(
+name|ApplicationHistoryManagerOnTimelineStore
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
 annotation|@
 name|VisibleForTesting
 DECL|field|UNAVAILABLE
@@ -961,6 +1005,8 @@ name|getEntities
 argument_list|()
 control|)
 block|{
+try|try
+block|{
 name|ApplicationReportExt
 name|app
 init|=
@@ -989,6 +1035,28 @@ operator|.
 name|appReport
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Error on generating application report for "
+operator|+
+name|entity
+operator|.
+name|getEntityId
+argument_list|()
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 return|return
@@ -1153,6 +1221,36 @@ name|YarnException
 throws|,
 name|IOException
 block|{
+return|return
+name|getApplicationAttempt
+argument_list|(
+name|appAttemptId
+argument_list|,
+literal|true
+argument_list|)
+return|;
+block|}
+DECL|method|getApplicationAttempt ( ApplicationAttemptId appAttemptId, boolean checkACLs)
+specifier|private
+name|ApplicationAttemptReport
+name|getApplicationAttempt
+parameter_list|(
+name|ApplicationAttemptId
+name|appAttemptId
+parameter_list|,
+name|boolean
+name|checkACLs
+parameter_list|)
+throws|throws
+name|YarnException
+throws|,
+name|IOException
+block|{
+if|if
+condition|(
+name|checkACLs
+condition|)
+block|{
 name|ApplicationReportExt
 name|app
 init|=
@@ -1173,6 +1271,7 @@ argument_list|(
 name|app
 argument_list|)
 expr_stmt|;
+block|}
 name|TimelineEntity
 name|entity
 init|=
@@ -1361,6 +1460,8 @@ init|=
 name|getApplicationAttempt
 argument_list|(
 name|appAttemptId
+argument_list|,
+literal|false
 argument_list|)
 decl_stmt|;
 return|return
@@ -3243,6 +3344,8 @@ name|appReport
 operator|.
 name|getCurrentApplicationAttemptId
 argument_list|()
+argument_list|,
+literal|false
 argument_list|)
 decl_stmt|;
 name|app
