@@ -779,7 +779,34 @@ argument_list|)
 argument_list|,
 literal|true
 argument_list|,
+literal|true
+argument_list|,
 literal|false
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|entities
+operator|.
+name|addEntity
+argument_list|(
+name|createApplicationTimelineEntity
+argument_list|(
+name|ApplicationId
+operator|.
+name|newInstance
+argument_list|(
+literal|0
+argument_list|,
+name|SCALE
+operator|+
+literal|2
+argument_list|)
+argument_list|,
+literal|true
+argument_list|,
+literal|false
+argument_list|,
+literal|true
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1086,7 +1113,9 @@ name|appId
 argument_list|,
 literal|true
 argument_list|,
-literal|true
+literal|false
+argument_list|,
+literal|false
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1103,7 +1132,9 @@ name|appId
 argument_list|,
 literal|false
 argument_list|,
-literal|true
+literal|false
+argument_list|,
+literal|false
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2445,6 +2476,41 @@ name|size
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|ApplicationId
+name|ignoredAppId
+init|=
+name|ApplicationId
+operator|.
+name|newInstance
+argument_list|(
+literal|0
+argument_list|,
+name|SCALE
+operator|+
+literal|2
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|ApplicationReport
+name|app
+range|:
+name|apps
+control|)
+block|{
+name|Assert
+operator|.
+name|assertNotEquals
+argument_list|(
+name|ignoredAppId
+argument_list|,
+name|app
+operator|.
+name|getApplicationId
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Test
@@ -2964,7 +3030,7 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
-DECL|method|createApplicationTimelineEntity ( ApplicationId appId, boolean emptyACLs, boolean noAttempt)
+DECL|method|createApplicationTimelineEntity ( ApplicationId appId, boolean emptyACLs, boolean noAttemptId, boolean wrongAppId)
 specifier|private
 specifier|static
 name|TimelineEntity
@@ -2977,7 +3043,10 @@ name|boolean
 name|emptyACLs
 parameter_list|,
 name|boolean
-name|noAttempt
+name|noAttemptId
+parameter_list|,
+name|boolean
+name|wrongAppId
 parameter_list|)
 block|{
 name|TimelineEntity
@@ -2996,6 +3065,21 @@ operator|.
 name|ENTITY_TYPE
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|wrongAppId
+condition|)
+block|{
+name|entity
+operator|.
+name|setEntityId
+argument_list|(
+literal|"wrong_app_id"
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|entity
 operator|.
 name|setEntityId
@@ -3006,6 +3090,7 @@ name|toString
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 name|entity
 operator|.
 name|setDomainId
@@ -3289,7 +3374,8 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
-name|noAttempt
+operator|!
+name|noAttemptId
 condition|)
 block|{
 name|eventInfo
